<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.example.random.random.user.ui.location.LocationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.location.LocationFragment">


        <TextView
            android:id="@+id/location_random_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/location_of_random_user"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/location_this_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/location_of_this_phone"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/location_random_user"
            app:layout_constraintStart_toStartOf="@+id/location_random_user"
            app:layout_constraintTop_toBottomOf="@+id/location_random_user" />

        <TextView
            android:id="@+id/location_distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/x_miles"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/location_random_user"
            app:layout_constraintStart_toStartOf="@+id/location_random_user"
            app:layout_constraintTop_toBottomOf="@+id/location_this_user" />

        <Button
            android:id="@+id/location_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/calculate_distance"
            app:layout_constraintEnd_toEndOf="@+id/location_distance"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/location_distance"
            app:layout_constraintTop_toBottomOf="@+id/location_distance" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

