<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="user"
            type="com.example.random.random.user.data.model.User" />
        <variable
            name="users"
            type="com.example.random.random.user.data.model.RandomUserResult" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainFragment">


        <ImageView
            android:id="@+id/main_user_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@+id/main_user_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/capture"
            android:contentDescription="@string/white_background" />

        <ImageView
            android:id="@+id/main_user_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:scaleType="fitXY"
            app:imageUrl="@{user.picture.large}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/profile_desc"/>

        <TextView
            android:id="@+id/main_user_name"
            style="@style/TextFont"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_small"
            app:fullFirstName="@{user.name.first}"
            app:fullLastName="@{user.name.last}"
            app:fullTitle="@{user.name.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/main_user_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/tools_text_user_name" />

        <TextView
            android:id="@+id/main_user_email"
            style="@style/TextFont"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            app:email="@{user.email}"
            app:layout_constraintEnd_toEndOf="@+id/main_user_name"
            app:layout_constraintStart_toStartOf="@+id/main_user_name"
            app:layout_constraintTop_toBottomOf="@+id/main_user_name"
            tools:text="@string/tools_text_user_email" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:clipToPadding="false"
            android:layoutDirection="locale"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_refresh_10_users_button"
            app:listUsers="@{users.results}"
            tools:listitem="@layout/list_item_user" />

        <Button
            android:id="@+id/main_refresh_user_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_refresh_user_button"
            android:layout_marginEnd="@dimen/margin_medium"
            android:text="@string/refresh_random_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_user_email" />

        <Button
            android:id="@+id/main_refresh_10_users_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/show_10_users"
            app:layout_constraintEnd_toEndOf="@+id/main_refresh_user_button"
            app:layout_constraintStart_toStartOf="@+id/main_refresh_user_button"
            app:layout_constraintTop_toBottomOf="@+id/main_refresh_user_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

